# gi

./: .env.example  .gitignore  README.md  classify_images.py  content_watcher.py  gallery.py  install.sh  main.py  photo_service.py  photo_service.sh  photo_watcher.py  pyproject.toml  requirements.txt  schema.sql  setup.sh  verify.py  watch_content.sh  watch_photos.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  llm_agent.py  rl_agent.py
src/core/: __init__.py  memory.py  perception.py  reasoning.py
templates/: index.html  login.html
