[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gi"
version = "0.1.0"
description = "General Intelligence (GI) — AGI research framework in Python"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "gymnasium>=1.0.0",
    "numpy>=1.26.0",
    "langchain>=0.2.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
full = [
    "tensorflow>=2.16.0",
    "jax[cpu]>=0.4.25",
    "wandb>=0.17.0",
    "torch-geometric>=2.5.0",
    "xformers>=0.0.26",
]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
